Add permissions to user DTO.
